@@ -1,3 +1,10 @@
+2005-10-18  Andreas Kupries <andreask@activestate.com>
+
+	* ipMore.tcl (::ip::maskToInt): Fixed [SF Tcllib Bug 1323146],
+	  using the patch supplied by Mikhail Teterin
+	  <kot@users.sf.net>. One path through the code did not mask the
+	  data down to 32bit.
+
 2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
